--- a/index.html
+++ b/index.html
@@ -117,58 +117,24 @@
           </div>
         </section>
         <!-- section immagini-->
-        <section id="loghi">
+        <section id="loghi" >
           <h4>INNOVATIVE BUSINESSES TRUST DIGITALOCEAN</h4>
 
-          <div class="container">
+          <div class="cont-flex">
 
-            <div class="row">
-              <div class="col-xs-6 col-md-2">
-                <img id="doc" src="img/docker.png" alt="">
-              </div>
-              <div class="col-xs-6 col-md-2">
-                <img id="git"src="img/gitlab.png" alt="">
-              </div>
-              <div class="col-xs-6 col-md-2">
-                <img id="sla" src="img/slack.png" alt="">
-              </div>
-              <div class="col-xs-6 col-md-2">
-                <img id="has"src="img/hashicorp.png" alt="">
-              </div>
-              <div class="col-xs-6 col-md-2">
-                <img id="wew"src="img/wework.png" alt="">
-              </div>
-              <div class="col-xs-6 col-md-2">
-                <img id="spl"src="img/splunk.png" alt="">
-              </div>
-            </div>
+
+              <img id="doc" src="img/docker.png" alt="">
+              <img id="git"src="img/gitlab.png" alt="">
+              <img id="sla" src="img/slack.png" alt="">
+              <img id="has"src="img/hashicorp.png" alt="">
+              <img id="wew"src="img/wework.png" alt="">
+              <img id="spl"src="img/splunk.png" alt="">
+
+
           </div>
           <p><a href="#">View customer stories </a></p>
         </section>
 
-
-          <!-- prova lista -->
-
-
-          <!-- <ul>
-            <li>
-              <img id="doc" src="img/docker.png" alt="">
-            </li>
-            <li>
-              <img id="git"src="img/gitlab.png" alt="">
-            </li>
-            <li >
-              <img id="sla" src="img/slack.png" alt="">
-            </li>
-            <li >
-              <img id="has"src="img/hashicorp.png" alt="">
-           </li>
-            <li >
-              <img id="wew"src="img/wework.png" alt="">
-            </li>
-            <li >
-              <img id="spl"src="img/splunk.png" alt="">
-            </li> -->
 
 
         <!-- section cinque colonne-->
