loghi responsive e base footer

--- a/index.html
+++ b/index.html
@@ -358,10 +358,8 @@
 
       <!-- footer a cinque colonne  -->
       <footer>
-        <div class="container">
-          <div class="row">
-            <div class="col-xs-12 col-md-4">
-              <h1>D</h1>
+        <div class="">
+            <h1>D</h1>
               <p>© 2019 DigitalOcean, LLC. All rights reserved.</p>
               <i class="fab fa-facebook"></i>
               <i class="fab fa-linkedin"></i>
@@ -370,7 +368,7 @@
               <i class="fa fa-pie-chart"></i>
               <i class="fa fa-pie-chart"></i>
             </div>
-            <div class="col-xs-6 col-md-2">
+            <div class="">
               <h6>Company</h6>
               <ul>
                 <li><a href="#">About</a></li>
@@ -380,7 +378,7 @@
                 <li><a href="#">About</a></li>
               </ul>
             </div>
-            <div class="col-xs-6 col-md-2">
+            <div class="">
               <h6>products</h6>
               <ul>
                 <li><a href="#">About</a></li>
@@ -396,7 +394,7 @@
                 <li><a href="#">About</a></li>
               </ul>
             </div>
-            <div class="col-xs-6 col-md-2">
+            <div class="">
               <h6>community</h6>
               <ul>
                 <li><a href="#">About</a></li>
@@ -409,7 +407,7 @@
                 <li><a href="#">About</a></li>
               </ul>
             </div>
-            <div class="col-xs-6 col-md-2">
+            <div class="">
               <h6>contact</h6>
               <ul>
                 <li><a href="#">About</a></li>
@@ -419,8 +417,7 @@
                 <li><a href="#">About</a></li>
               </ul>
             </div>
-          </div>
-        </div>
+          
 
       </footer>
 
